Bug 20785. Root event handlers for JavaScript GC. r=brendan@mozilla.org